--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
     </properties>
 
     <dependencies>
+        <!-- Jakarta Servlet -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -36,40 +39,105 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-            <!-- Lombok -->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <scope>provided</scope>
-            </dependency>
 
-            <!-- Hibernate / JPA -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>6.0.0.Final</version>
-            </dependency>
-
-            <!-- API JPA -->
-            <dependency>
-                <groupId>jakarta.persistence</groupId>
-                <artifactId>jakarta.persistence-api</artifactId>
-                <version>3.1.0</version>
-            </dependency>
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Hibernate / JPA -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!-- Thymeleaf -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.1.3.RELEASE</version>
+        </dependency>
+
+        <!-- H2 Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Plugin WAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.4.0</version>
+            </plugin>
+
+            <!-- Plugin SQL pour créer la BDD H2 lors du build -->
+            <plugin>
+                <groupId>net.rationalminds</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>1.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>2.2.224</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <!-- Création de la BDD pour les tests -->
+                    <execution>
+                        <id>create-schema-test</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <driver>org.h2.Driver</driver>
+                            <username>sa</username>
+                            <password />
+                            <onError>continue</onError>
+                            <autocommit>true</autocommit>
+                            <url>jdbc:h2:${project.basedir}/db_file/database_test;DB_CLOSE_ON_EXIT=FALSE</url>
+                            <srcFiles>
+                                <srcFile>src/test/resources/script.sql</srcFile>
+                            </srcFiles>
+                        </configuration>
+                    </execution>
+
+                    <!-- Création de la BDD pour la production -->
+                    <execution>
+                        <id>create-schema-prod</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <driver>org.h2.Driver</driver>
+                            <username>sa</username>
+                            <password />
+                            <onError>continue</onError>
+                            <autocommit>true</autocommit>
+                            <url>jdbc:h2:${project.basedir}/db_file/database;DB_CLOSE_ON_EXIT=FALSE</url>
+                            <srcFiles>
+                                <srcFile>src/main/resources/script.sql</srcFile>
+                            </srcFiles>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
