Fix - Erreur getters/setters : Ajout plugin lombok à pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,25 @@
                 <version>3.4.0</version>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.34</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
             <!-- Plugin SQL pour créer la BDD H2 lors du build -->
             <plugin>
                 <groupId>net.rationalminds</groupId>
